force-app/main/default/objects/MC4SF__MC_Query_Filter__c/MC4SF__MC_Query_Filter__c.object-meta.xml
<CustomObject>
    <label>MC Query Filter</label>
    <nameField>
        <label>MC Query Filer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Query Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>