force-app/main/default/objects/MC4SF__MC_Query_Filter__c/fields/MC4SF__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>