force-app/main/default/objects/MC4SF__MC_Query_Filter__c/fields/MC4SF__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>