force-app/main/default/objects/MC4SF__MC_Query_Filter__c/fields/MC4SF__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>