force-app/main/default/objects/MC4SF__MC_Query_Filter__c/fields/MC4SF__MC_Query__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_Query__c</fullName>
    <label>MC Query</label>
    <referenceTo>MC4SF__MC_Query__c</referenceTo>
    <relationshipLabel>MC Query Filters</relationshipLabel>
    <relationshipName>MC_Query_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>