force-app/main/default/objects/MC4SF__MC_Query_Filter__c/fields/MC4SF__Value__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>